--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -39,6 +39,7 @@
     <PackageVersion Include="NLog.Extensions.Logging" Version="5.0.4" />
     <PackageVersion Include="NLog.Schema" Version="5.0.4" />
     <PackageVersion Include="ScipBe.Common.Office.OneNote" Version="3.0.1" />
+    <PackageVersion Include="SharpCompress" Version="0.33.0" />
     <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.435" />
     <PackageVersion Include="System.CommandLine" Version="2.0.0-beta1.20071.2" />
     <PackageVersion Include="System.ComponentModel.Composition" Version="7.0.0" />
